--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h1>VIM est un éditeur de texte</h1>
   <!-- Vim c'est trop de commande -->
-  <table>
+  <table >
   <tr>
-    <td> gauche   </td>
+    <td class="1">gauche</span>    </td>
     <td>  touche h  </td>
 
   </tr>
@@ -84,8 +84,8 @@ partiellement tapée dont vous ne voudriez plus   </td>
 
   </tr>
   <tr>
-    <td><h5>Le format d’une commande en mode normal est :</h5>    </td>
-    <td>  <h5> [nombre] commande objet où</h5>  </td>
+    <td>Le format d’une commande en mode normal est :    </td>
+    <td> [nombre] commande objet où</td>
   </tr>
   <tr>
     <td>nombre :    </td>
@@ -110,209 +110,7 @@ partiellement tapée dont vous ne voudriez plus   </td>
   <tr>
     <td>  Pour annuler tous les changements sur une ligne   </td>
     <td> tapez U majuscule.   </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  <tr>
-    <td>    </td>
-    <td>    </td>
-
-  </tr>
-  </table>
+    </table>
 </body>
 </html>
 <!-- j'avais zapé une balise table -->
