amélioration couleur et agencement

--- a/index.html
+++ b/index.html
@@ -5,19 +5,10 @@
   <title>Vi Improved</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body >
 <header>
-  <nav>
-    <div class="navigation">
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-
-
-    </div>
+  <nav class="nav">
+    <img src="logo vim.jpeg" alt="" />
   </nav>
 </header>
 
@@ -28,7 +19,7 @@
     <th>  se déplacer dans Vim</th>
 
       <tr>
-        <td class="1">gauche</span>    </td>
+        <td> gauche  </td>
         <td>  touche h  </td>
       </tr>
 
@@ -46,20 +37,20 @@
         <td> haut   </td>
         <td> touche k   </td>
       </tr>
-
+      <th>Base VIM</th>
       <tr>
         <td> Pour entrer dans Vim (à l’invite $)   </td>
-        <td> tapez vim [Fichier] < entrée>   </td>
+        <td> tapez vim [Fichier]  entrée</td>
       </tr>
 
       <tr>
         <td> Pour quitter Vim sans enregistrer    </td>
-        <td> tapez <Échap> :q ! < entrée>   </td>
+        <td> tapez Échap :q !  entrée   </td>
       </tr>
 
       <tr>
         <td>Pour quitter Vim en enregistrant  </td>
-        <td> tapez <Échap> :x   </td>
+        <td> tapez Échap :x   </td>
       </tr>
     </table>
   </div>
@@ -73,11 +64,11 @@
 
     <tr>
       <td> Pour quitter  </td>
-      <td> tapez <Échap>   </td>
+      <td> tapez Échap   </td>
     </tr>
 
 
-  <th>Effacement et annulation </th>
+  <th>Effacement <br>et annulation </th>
     <tr>
       <td> Pour effacer un caractère sous le curseur en mode normal   </td>
       <td>  tapez x   </td>
@@ -91,7 +82,7 @@
     <tr>
       <td> Pour annuler une commande
   partiellement tapée dont vous ne voudriez plus <br>  </td>
-      <td> tapez <Échap>   </td>
+      <td> tapez Échap   </td>
     </tr>
 
     <tr>
@@ -132,6 +123,7 @@
     <tr>
       <td>  Pour annuler tous les changements sur une ligne   </td>
       <td> tapez U majuscule.   </td>
+    </tr>
     </table>
 </body>
 </html>
